--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Студия</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g==" crossorigin="anonymous" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -11,112 +12,124 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="/" class="logo"><span class="logo-item">Web</span>Studio</a>
-        </nav>
-        <ul>
-            <li>
-                <a href="./index.html" class="header-nav-item current">Студия</a>
-            </li>
-            <li>
-                <a href="./portfolio.html" class="header-nav-item">Портфолио</a>
-            </li>
-            <li>
-                <a href="#" class="header-nav-item">Контакты</a>
-            </li>
-        </ul>
-        <address>
-            <ul>
-            <li><a href="info@devstudio.com" class="header-nav-item">info@devstudio.com</a></li>
-            <li><a href="+380961111111" class="header-nav-item">+38 096 111 11 11</a></li>
-            </ul>
-        </address>
+    <header class="header">
+        <div class="container">
+            <nav class="navigation">
+                <a href="/" class="logo link"><span class="logo-item">Web</span>Studio</a>
+                <ul class="navigation">
+                    <li class="nav-list-item list">
+                        <a href="./index.html link" class="header-nav-item current link">Студия</a>
+                    </li>
+                    <li class=" nav-list-item list">
+                        <a href="./portfolio.html" class="header-nav-item link">Портфолио</a>
+                    </li>
+                    <li class=" nav-list-item list">
+                        <a href="#" class="header-nav-item link">Контакты</a>
+                    </li>
+                </ul>
+            </nav>
+            <address class="address">
+                <ul class="navigation">
+                <li class="nav-list-item list"><a href="info@devstudio.com" class="header-nav-item link">info@devstudio.com</a></li>
+                <li class="nav-list-item list"><a href="+380961111111" class="header-nav-item link">+38 096 111 11 11</a></li>
+                </ul>
+            </address>
+        </div>
     </header>
     <main>
-        <section>
-            <h1 class="title">Эффективные решения для вашего бизнеса</h1>
-            <button type="button" class="btn-order">Заказать услугу</button>
+        <section class="hero">
+            <div class="container">
+                <h1 class="title">Эффективные решения <br>для вашего бизнеса</br></h1>
+                <button type="button" class="btn-order">Заказать услугу</button> 
+            </div>               
         </section>
 
         <!--FEATURES-->
-        <section>
-            <ul>
-                <li>
+        <section class="features">
+            <div class="container">
+             <ul>
+                <li class="list">
                     <p class="features-title">Внимание к деталям</p>
                     <span class="features-title-item">Идейные соображения, а также начало повседневной работы по формированию позиции.</span>
                 </li>
-                <li>
+                <li class="list">
                     <p class="features-title">Пунктуальность</p>
                     <span class="features-title-item">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</span>
                 </li>
-                <li>
+                <li class="list">
                     <p class="features-title">Планирование</p>
                     <span class="features-title-item">Равным образом консультация с широким активом в значительной степени обуславливает.</span>
                 </li>
-                <li>
+                <li class="list">
                     <p class="features-title">Современные технологии</p>
                     <span class="features-title-item">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</span>
                 </li>
-            </ul>
+            </ul>               
+            </div>
         </section>
 
         <!--ABOUT-->
-        <section>
+        <section class="about">
+            <div class="container">
             <h2 class="about-title">Чем мы занимаемся</h2>
             <ul>
-                <li>
+                <li class="list">
                     <img src="./img/about/img.png" alt="пишет код" width="370" height="294">
                 </li>
-                <li>
+                <li class="list">
                     <img src="./img/about/img-1.png" alt="проектирование" width="370" height="294">
                 </li>
-                <li>
+                <li class="list">
                     <img src="./img/about/img-2.png" alt="палитра" width="370" height="294">
                 </li>
             </ul>
+            </div>
         </section>
 
         <!--OUR TEAM-->
-        <section>
+        <section class="our-team">
+            <div class="container">
             <h2 class="our-team-title">Наша команда</h2>
             <ul>
-                <li>
+                <li class="list">
                     <img src="./img/ourteam/img-ourteam.jpg" alt="Игорь Демьяненко" width="270" height="260">
                     <h3 class="our-team-name">Игорь Демьяненко</h3>
                     <p class="our-team-position">Product Designer</p>
                 </li>
-                <li>
+                <li class="list">
                     <img src="./img/ourteam/img-ourteam-1.jpg" alt="Ольга Репина" width="270" height="260">
                     <h3 class="our-team-name">Ольга Репина</h3>
                      <p class="our-team-position">Frontend Developer</p>
                 </li>
-                <li>
+                <li class="list">
                     <img src="./img/ourteam/img-ourteam-2.jpg" alt="Николай Тарасов" width="270" height="260">
                     <h3 class="our-team-name">Николай Тарасов</h3>
                      <p class="our-team-position">Marketing</p>
                 </li>
-                <li>
+                <li class="list">
                     <img src="./img/ourteam/img-ourteam-3.jpg" alt="Михаил Ермаков" width="270" height="260">
                     <h3 class="our-team-name">Михаил Ермаков</h3>
                      <p class="our-team-position">UI Designer</p>
                 </li>
             </ul>
+            </div>
         </section>
     </main>
 
-    <footer>
-            <a href="/" class="logo"><span class="logo-item">Web</span>Studio</a>
+    <footer class="footer">
+        <div class="container">
+            <a href="/" class="logo link"><span class="logo-item link">Web</span><span class="logo-footer">Studio</span></a>
         <address>
             <ul>
-                <li><a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858" target="_blank" class="footer-address">г. Киев, пр-т Леси Украинки, 26</a>
+                <li class="list"><a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858" target="_blank" class="footer-address link">г. Киев, пр-т Леси Украинки, 26</a>
                 </li>
-                <li><a href="info@example.com" class="footer-mail">info@example.com</a>
+                <li class="list"><a href="info@example.com" class="footer-mail link">info@example.com</a>
                 </li>
-                <li><a href="+380991111111" class="footer-tel">+38 099 111 11 11</a>
+                <li class="list"><a href="+380991111111" class="footer-tel link">+38 099 111 11 11</a>
                 </li>
             </ul>
         </address>
+        </div>
     </footer>
 </body>
 </html>
