--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Портфолио</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g==" crossorigin="anonymous" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -11,27 +12,29 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="/" class="logo"><span class="logo-item">Web</span>Studio</a>
-        </nav>
-        <ul>
-            <li>
-                <a href="./index.html" class="header-nav-item">Студия</a>
-            </li>
-            <li>
-                <a href="./portfolio.html" class="header-nav-item current">Портфолио</a>
-            </li>
-            <li>
-                <a href="#" class="header-nav-item">Контакты</a>
-            </li>
-        </ul>
-        <address>
-            <ul>
-            <li><a href="info@devstudio.com" class="header-nav-item">info@devstudio.com</a></li>
-            <li><a href="+380961111111" class="header-nav-item">+38 096 111 11 11</a></li>
-            </ul>
-        </address>
+    <header class="header">
+        <div class="container">
+            <nav class="navigation">
+                <a href="/" class="logo link"><span class="logo-item">Web</span>Studio</a>
+                <ul class="navigation">
+                    <li class="nav-list-item list">
+                        <a href="./index.html" class="header-nav-item link">Студия</a>
+                    </li>
+                    <li class="nav-list-item list">
+                        <a href="./portfolio.html" class="header-nav-item current link">Портфолио</a>
+                    </li>
+                    <li class="nav-list-item list">
+                        <a href="#" class="header-nav-item link">Контакты</a>
+                    </li>
+                </ul>
+            </nav>
+            <address class="address">
+                <ul class="navigation">
+                <li class="nav-list-item list"><a href="info@devstudio.com" class="header-nav-item link">info@devstudio.com</a></li>
+                <li class="nav-list-item list"><a href="+380961111111" class="header-nav-item link">+38 096 111 11 11</a></li>
+                </ul>
+            </address>
+        </div>
     </header>
 
     <main>
@@ -39,7 +42,7 @@
         
         <section>
             <h1 class="visually-hidden">Filters</h1>   
-            <button type="button" class="filter-btn active">Все</button>
+            <button type="button" class="filter-btn">Все</button>
             <button type="button" class="filter-btn">Веб-сайты</button>
             <button type="button" class="filter-btn">Приложения</button>
             <button type="button" class="filter-btn">Дизайн</button>
@@ -95,14 +98,14 @@
     </main>
 
     <footer>
-        <a href="/" class="logo"><span class="logo-item">Web</span>Studio</a>
+        <a href="/" class="logo link"><span class="logo-item">Web</span>Studio</a>
     <address>
         <ul>
-            <li><a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858" target="_blank" class="footer-address">г. Киев, пр-т Леси Украинки, 26</a>
+            <li class="list"><a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858" target="_blank" class="footer-address link">г. Киев, пр-т Леси Украинки, 26</a>
             </li>
-            <li><a href="info@example.com" class="footer-mail">info@example.com</a>
+            <li class="list"><a href="info@example.com" class="footer-mail link">info@example.com</a>
             </li>
-            <li><a href="+380991111111" class="footer-tel">+38 099 111 11 11</a>
+            <li class="list"><a href="+380991111111" class="footer-tel link">+38 099 111 11 11</a>
             </li>
         </ul>
     </address>
