--- a/index.html
+++ b/index.html
@@ -45,22 +45,22 @@
         </section>
 
         <!--FEATURES-->
-        <section class="features">
+        <section class="features-section">
             <div class="container">
-             <ul>
-                <li class="list">
+             <ul class="features">
+                <li class="features-item list">
                     <p class="features-title">Внимание к деталям</p>
                     <span class="features-title-item">Идейные соображения, а также начало повседневной работы по формированию позиции.</span>
                 </li>
-                <li class="list">
+                <li class="features-item list">
                     <p class="features-title">Пунктуальность</p>
                     <span class="features-title-item">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</span>
                 </li>
-                <li class="list">
+                <li class="features-item list">
                     <p class="features-title">Планирование</p>
                     <span class="features-title-item">Равным образом консультация с широким активом в значительной степени обуславливает.</span>
                 </li>
-                <li class="list">
+                <li class="features-item list">
                     <p class="features-title">Современные технологии</p>
                     <span class="features-title-item">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</span>
                 </li>
@@ -72,14 +72,14 @@
         <section class="about">
             <div class="container">
             <h2 class="about-title">Чем мы занимаемся</h2>
-            <ul>
-                <li class="list">
+            <ul class="about-img-list">
+                <li class="about-img list">
                     <img src="./img/about/img.png" alt="пишет код" width="370" height="294">
                 </li>
-                <li class="list">
+                <li class="about-img list">
                     <img src="./img/about/img-1.png" alt="проектирование" width="370" height="294">
                 </li>
-                <li class="list">
+                <li class="about-img list">
                     <img src="./img/about/img-2.png" alt="палитра" width="370" height="294">
                 </li>
             </ul>
@@ -87,29 +87,61 @@
         </section>
 
         <!--OUR TEAM-->
-        <section class="our-team">
+        <section class="our-team-section">
             <div class="container">
             <h2 class="our-team-title">Наша команда</h2>
-            <ul>
-                <li class="list">
-                    <img src="./img/ourteam/img-ourteam.jpg" alt="Игорь Демьяненко" width="270" height="260">
-                    <h3 class="our-team-name">Игорь Демьяненко</h3>
-                    <p class="our-team-position">Product Designer</p>
+            <ul class="our-team-list">
+                <li class="our-team list">
+                    <figure class="board">
+                        <a href="#">
+                            <img src="./img/ourteam/img-ourteam.jpg" alt="Игорь Демьяненко" width="270" height="260">
+                        </a>
+                    <figcaption>
+                        <a href="#" class="link">
+                            <h3 class="our-team-name">Игорь Демьяненко</h3>
+                        </a>
+                        <p class="our-team-position">Product Designer</p>
+                    </figcaption>
+                    </figure>
                 </li>
-                <li class="list">
-                    <img src="./img/ourteam/img-ourteam-1.jpg" alt="Ольга Репина" width="270" height="260">
-                    <h3 class="our-team-name">Ольга Репина</h3>
-                     <p class="our-team-position">Frontend Developer</p>
+                <li class="our-team list">
+                    <figure class="board">
+                        <a href="#">
+                            <img src="./img/ourteam/img-ourteam-1.jpg" alt="Ольга Репина" width="270" height="260">
+                        </a>
+                    <figcaption>
+                        <a href="#" class="link">
+                            <h3 class="our-team-name">Ольга Репина</h3>
+                        </a>
+                        <p class="our-team-position">Frontend Developer</p>
+                    </figcaption>
+                    </figure>
                 </li>
-                <li class="list">
-                    <img src="./img/ourteam/img-ourteam-2.jpg" alt="Николай Тарасов" width="270" height="260">
-                    <h3 class="our-team-name">Николай Тарасов</h3>
-                     <p class="our-team-position">Marketing</p>
+                <li class="our-team list">
+                    <figure class="board">
+                        <a href="#">
+                            <img src="./img/ourteam/img-ourteam-2.jpg" alt="Николай Тарасов" width="270" height="260">
+                        </a>
+                    <figcaption>
+                        <a href="#" class="link">
+                            <h3 class="our-team-name">Николай Тарасов</h3>
+                        </a>
+                        <p class="our-team-position">Marketing</p>
+                    </figcaption>
+                    </figure>
                 </li>
-                <li class="list">
-                    <img src="./img/ourteam/img-ourteam-3.jpg" alt="Михаил Ермаков" width="270" height="260">
-                    <h3 class="our-team-name">Михаил Ермаков</h3>
-                     <p class="our-team-position">UI Designer</p>
+                <li class="our-team list">
+                    <figure class="board">
+                        <a href="#">
+                            <img src="./img/ourteam/img-ourteam-3.jpg" alt="Михаил Ермаков" width="270" height="260">
+                        </a>
+                    <figcaption>
+                        <a href="#" class="link">
+                            <h3 class="our-team-name">Михаил Ермаков</h3>   
+                        </a>
+                        <p class="our-team-position">UI Designer</p>
+                    </figcaption>
+                    </figure>
                 </li>
             </ul>
             </div>
@@ -121,11 +153,11 @@
             <a href="/" class="logo link"><span class="logo-item link">Web</span><span class="logo-footer">Studio</span></a>
         <address>
             <ul>
-                <li class="list"><a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858" target="_blank" class="footer-address link">г. Киев, пр-т Леси Украинки, 26</a>
+                <li class="footer-item list"><a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858" target="_blank" class="footer-address link">г. Киев, пр-т Леси Украинки, 26</a>
                 </li>
-                <li class="list"><a href="info@example.com" class="footer-mail link">info@example.com</a>
+                <li class="footer-item list"><a href="info@example.com" class="footer-mail link">info@example.com</a>
                 </li>
-                <li class="list"><a href="+380991111111" class="footer-tel link">+38 099 111 11 11</a>
+                <li class="footer-item list"><a href="+380991111111" class="footer-tel link">+38 099 111 11 11</a>
                 </li>
             </ul>
         </address>
