--- a/portfolio.html
+++ b/portfolio.html
@@ -18,12 +18,12 @@
                 <a href="/" class="logo link"><span class="logo-item">Web</span>Studio</a>
                 <ul class="navigation">
                     <li class="nav-list-item list">
-                        <a href="./index.html" class="header-nav-item link">Студия</a>
+                        <a href="./index.html link" class="header-nav-item current link">Студия</a>
                     </li>
-                    <li class="nav-list-item list">
-                        <a href="./portfolio.html" class="header-nav-item current link">Портфолио</a>
+                    <li class=" nav-list-item list">
+                        <a href="./portfolio.html" class="header-nav-item link">Портфолио</a>
                     </li>
-                    <li class="nav-list-item list">
+                    <li class=" nav-list-item list">
                         <a href="#" class="header-nav-item link">Контакты</a>
                     </li>
                 </ul>
@@ -36,79 +36,168 @@
             </address>
         </div>
     </header>
-
     <main>
-        <!--FILTERS -->
         
-        <section>
-            <h1 class="visually-hidden">Filters</h1>   
-            <button type="button" class="filter-btn">Все</button>
-            <button type="button" class="filter-btn">Веб-сайты</button>
-            <button type="button" class="filter-btn">Приложения</button>
-            <button type="button" class="filter-btn">Дизайн</button>
-            <button type="button" class="filter-btn">Маркетинг</button>
+    <div class="content container">
+        <!--FILTERS -->
+        <section class="filter-buttoms">
+            <h1 class="visually-hidden">Filters</h1>
+        <ul class="filter-buttoms-list">
+            <li class="list btn">
+                <button type="button" class="filter-btn">Все</button>
+            </li>
+            <li class="list btn">
+                <button type="button" class="filter-btn">Веб-сайты</button>
+            </li>
+            <li class="list btn">
+                <button type="button" class="filter-btn">Приложения</button>
+            </li>
+            <li class="list btn">
+                <button type="button" class="filter-btn">Дизайн</button>
+            </li>
+            <li class="list btn">
+                <button type="button" class="filter-btn">Маркетинг</button>
+            </li>
+        </ul> 
         </section>
 
-        <!--BUTTON ALL-->
-        <section  class="project"> 
-            <img src="./img/portfolio/img-portfolio-1.png" alt="Технокряк">
-            <h2 class="project-title">Технокряк</h2>
-            <p class="project-title-item">Веб-сайт</p>
+        <!--PROJECT CARDS-->
+        <div class="project-list">
+        <section  class="project">
+            <figure class="figure">
+                <a href="#">
+                    <img src="./img/portfolio/img-portfolio-1.png" alt="Технокряк">
+                </a>
+                <figcaption class="proj-img-descrip">
+                    <a href="#" class="link">
+                        <h2 class="project-title">Технокряк</h2>
+                    </a>
+                    <p class="project-title-item">Веб-сайт</p>
+                </figcaption>
+            </figure> 
         </section>
         <section class="project"> 
-            <img src="./img/portfolio/img-portfolio-2.png" alt="Постер New Orlean vs Golden Star">
-            <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
-            <p class="project-title-item">Дизайн</p>
+            <figure class="figure">
+                <a href="#">
+                   <img src="./img/portfolio/img-portfolio-2.png" alt="Постер New Orlean vs Golden Star">
+                </a>
+                <figcaption class="proj-img-descrip">
+                    <a href="#" class="link">
+                         <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
+                    </a>
+                   <p class="project-title-item">Дизайн</p>
+                </figcaption>
+            </figure>
         </section>  
         <section class="project"> 
-            <img src="./img/portfolio/img-portfolio-3.png" alt="Ресторан Seafood">
-            <h2 class="project-title">Ресторан Seafood</h2>
-            <p class="project-title-item">Приложение</p>
+            <figure class="figure">
+                <a href="#">
+                    <img src="./img/portfolio/img-portfolio-3.png" alt="Ресторан Seafood">
+                </a>
+                <figcaption class="proj-img-descrip">
+                    <a href="#" class="link">
+                        <h2 class="project-title">Ресторан Seafood</h2>
+                    </a>
+                    <p class="project-title-item">Приложение</p>
+                </figcaption>
+            </figure>
         </section>
         <section class="project"> 
-            <img src="./img/portfolio/img-portfolio-4.png" alt="Проект Prime">
-            <h2 class="project-title">Проект Prime</h2>
-            <p class="project-title-item">Маркетинг</p>
+            <figure class="figure">
+                <a href="#">
+                    <img src="./img/portfolio/img-portfolio-4.png" alt="Проект Prime">
+                </a>
+                <figcaption class="proj-img-descrip">
+                    <a href="#" class="link">
+                        <h2 class="project-title">Проект Prime</h2>        
+                    </a>
+                    <p class="project-title-item">Маркетинг</p>
+                </figcaption>
+            </figure>
         </section>
         <section class="project"> 
-            <img src="./img/portfolio/img-portfolio-5.png" alt="Проект Boxes">
-            <h2 class="project-title">Проект Boxes</h2>
-            <p class="project-title-item">Приложение</p>
+            <figure class="figure">
+                <a href="#">
+                    <img src="./img/portfolio/img-portfolio-5.png" alt="Проект Boxes">
+                </a>
+                <figcaption class="proj-img-descrip">
+                    <a href="#" class="link">
+                        <h2 class="project-title">Проект Boxes</h2>
+                    </a>
+                    <p class="project-title-item">Приложение</p>
+                </figcaption>
+            </figure>
         </section>
         <section class="project"> 
-            <img src="./img/portfolio/img-portfolio-6.png" alt="Inspiration has no Borders">
-            <h2 class="project-title">Inspiration has no Borders</h2>
-            <p class="project-title-item">Веб-сайт</p>
+            <figure class="figure">
+                <a href="#">
+                    <img src="./img/portfolio/img-portfolio-6.png" alt="Inspiration has no Borders">
+                </a>
+                <figcaption class="proj-img-descrip">
+                    <a href="#" class="link">
+                        <h2 class="project-title">Inspiration has no Borders</h2>
+                    </a>
+                    <p class="project-title-item">Веб-сайт</p>
+                </figcaption>
+            </figure> 
         </section>
         <section class="project"> 
-            <img src="./img/portfolio/img-portfolio-7.png" alt="Издание Limited Edition">
-            <h2 class="project-title">Издание Limited Edition</h2>
-            <p class="project-title-item">Дизайн</p>
+            <figure class="figure">
+                <a href="#">
+                    <img src="./img/portfolio/img-portfolio-7.png" alt="Издание Limited Edition">
+                </a>
+                <figcaption class="proj-img-descrip">
+                    <a href="#" class="link">
+                        <h2 class="project-title">Издание Limited Edition</h2>
+                    </a>
+                    <p class="project-title-item">Дизайн</p>
+                </figcaption>
+            </figure>
         </section>
         <section class="project"> 
-            <img src="./img/portfolio/img-portfolio-8.png" alt="Проект LAB">
-            <h2 class="project-title">Проект LAB</h2>
-            <p class="project-title-item">Маркетинг</p>
+            <figure class="figure">
+                <a href="#">
+                    <img src="./img/portfolio/img-portfolio-8.png" alt="Проект LAB">
+                </a>
+                <figcaption class="proj-img-descrip">
+                    <a href="#" class="link">
+                        <h2 class="project-title">Проект LAB</h2>
+                    </a>
+                    <p class="project-title-item">Маркетинг</p>
+                </figcaption>
+            </figure>
         </section>  
-        <section class="project"> 
-            <img src="./img/portfolio/img-portfolio-9.png" alt="Growing Business">
-            <h2 class="project-title">Growing Business</h2>
-            <p class="project-title-item">Приложение</p>
+        <section class="project">
+            <figure class="figure">
+                <a href="#">
+                    <img src="./img/portfolio/img-portfolio-9.png" alt="Growing Business">
+                </a>
+                <figcaption class="proj-img-descrip">
+                    <a href="#" class="link">
+                        <h2 class="project-title">Growing Business</h2>
+                    </a>
+                <p class="project-title-item">Приложение</p>
+                </figcaption>
+            </figure>   
         </section>
+        </div>
+    </div>
     </main>
 
-    <footer>
-        <a href="/" class="logo link"><span class="logo-item">Web</span>Studio</a>
-    <address>
-        <ul>
-            <li class="list"><a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858" target="_blank" class="footer-address link">г. Киев, пр-т Леси Украинки, 26</a>
-            </li>
-            <li class="list"><a href="info@example.com" class="footer-mail link">info@example.com</a>
-            </li>
-            <li class="list"><a href="+380991111111" class="footer-tel link">+38 099 111 11 11</a>
-            </li>
-        </ul>
-    </address>
-</footer>
+    <footer class="footer">
+        <div class="container">
+            <a href="/" class="logo link"><span class="logo-item link">Web</span><span class="logo-footer">Studio</span></a>
+        <address>
+            <ul>
+                <li class="footer-item list"><a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858" target="_blank" class="footer-address link">г. Киев, пр-т Леси Украинки, 26</a>
+                </li>
+                <li class="footer-item list"><a href="info@example.com" class="footer-mail link">info@example.com</a>
+                </li>
+                <li class="footer-item list"><a href="+380991111111" class="footer-tel link">+38 099 111 11 11</a>
+                </li>
+            </ul>
+        </address>
+        </div>
+    </footer>
 </body>
 </html>
