--- a/portfolio.html
+++ b/portfolio.html
@@ -18,10 +18,10 @@
                 <a href="/" class="logo link"><span class="logo-item">Web</span>Studio</a>
                 <ul class="navigation">
                     <li class="nav-list-item list">
-                        <a href="./index.html link" class="header-nav-item current link">Студия</a>
+                        <a href="./index.html link" class="header-nav-item link">Студия</a>
                     </li>
                     <li class=" nav-list-item list">
-                        <a href="./portfolio.html" class="header-nav-item link">Портфолио</a>
+                        <a href="./portfolio.html" class="header-nav-item current link">Портфолио</a>
                     </li>
                     <li class=" nav-list-item list">
                         <a href="#" class="header-nav-item link">Контакты</a>
