--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             </nav>
             <address class="address">
                 <ul class="navigation">
-                <li class="nav-list-item list"><a href="info@devstudio.com" class="header-nav-item link">info@devstudio.com</a></li>
-                <li class="nav-list-item list"><a href="+380961111111" class="header-nav-item link">+38 096 111 11 11</a></li>
+                <li class="nav-list-item list"><a href="info@devstudio.com" class="link mail-item">info@devstudio.com</a></li>
+                <li class="nav-list-item list"><a href="+380961111111" class="link tel-item">+38 096 111 11 11</a></li>
                 </ul>
             </address>
         </div>
