--- a/index.html
+++ b/index.html
@@ -306,43 +306,43 @@
             <ul class="our-clients list">
                 <li class="our-clients-list">
                     <a href="" class="our-clients-link link">
-                        <svg class="our-clients-logo-1">
-                            <use href="./img/strike.svg#icon-logo-1"></use>
+                        <svg class="our-clients-logo logo-1">
+                            <use href="./img/sprite.svg#icon-logo-1"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="our-clients-list">
                     <a href="" class="our-clients-link link">
-                        <svg class="our-clients-logo-2">
-                            <use href="./img/strike.svg#icon-logo-2"></use>
+                        <svg class="our-clients-logo logo-2">
+                            <use href="./img/sprite.svg#icon-logo-2"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="our-clients-list">
                     <a href="" class="our-clients-link link">
-                        <svg class="our-clients-logo-3">
-                            <use href="./img/strike.svg#icon-logo-3"></use>
+                        <svg class="our-clients-logo logo-3">
+                            <use href="./img/sprite.svg#icon-logo-3"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="our-clients-list">
                     <a href="" class="our-clients-link link">
-                        <svg class="our-clients-logo-4">
-                            <use href="./img/strike.svg#icon-logo-4"></use>
+                        <svg class="our-clients-logo logo-4">
+                            <use href="./img/sprite.svg#icon-logo-4"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="our-clients-list">
                     <a href="" class="our-clients-link link">
-                        <svg class="our-clients-logo-5">
-                            <use href="./img/strike.svg#icon-logo-5"></use>
+                        <svg class="our-clients-logo logo-5">
+                            <use href="./img/sprite.svg#icon-logo-5"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="our-clients-list">
                     <a href="" class="our-clients-link link">
-                        <svg class="our-clients-logo-6">
-                            <use href="./img/strike.svg#icon-logo-6"></use>
+                        <svg class="our-clients-logo logo-6">
+                            <use href="./img/sprite.svg#icon-logo-6"></use>
                         </svg>
                     </a>
                 </li>
